# server-tuic-rs

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  justfile  rustfmt.toml
.github/: Dockerfile  cliff.toml  dependabot.yml  target.toml
.github/workflows/: ci.yml  docker-publish.yml  release-publish.yml  release.yml  rust-build.yml
core/: Cargo.toml
core/src/: quinn.rs  utils.rs
core/src/model/: authenticate.rs  dissociate.rs
core/src/protocol/: dissociate.rs  heartbeat.rs
docs/superpowers/specs/: 2026-03-30-anti-probe-critical-fixes-design.md
server/: Cargo.toml  README.md
server-agent/: Cargo.toml  README.md  acl-example.yaml
server-agent/src/: acl.rs  config.rs  io.rs  lib.rs  main.rs  panel.rs  server.rs  utils.rs
server-agent/src/connection/: handle_task.rs  mod.rs  udp_session.rs
server-agent/tests/config/: acl_socks5.yaml
server-tuic/: Cargo.toml  README.md
server-tuic-agent/: Cargo.toml
server-tuic-agent/examples/: acl.yaml.example  config.toml.example
server-tuic-agent/src/: acl.rs  config.rs  congestion.rs  error.rs  lib.rs  main.rs  panel.rs  server.rs  stats.rs  tls.rs
server-tuic-agent/src/connection/: anti_probe.rs  handle_stream.rs  handle_task.rs  mod.rs
server-tuic-agent/tests/config/: acl_basic.yaml  acl_reject.yaml  custom_stream_limits.toml  valid_toml_config.toml
server-tuic-rs/: .gitignore  Cargo.toml  README.md
server-tuic-rs-agent/: Cargo.toml  README.md
server-tuic-rs-agent/src/: acl.rs  lib.rs  panel.rs
server-tuic-rs-agent/src/connection/: handle_task.rs  mod.rs  udp_session.rs
server-tuic-rs/examples/: config.toml.example
server-tuic-rs/src/: acl.rs  config.rs  config_auto.rs  dns.rs  error.rs  lib.rs  main.rs  panel.rs  server.rs  tls.rs
server-tuic-rs/src/connection/: handle_task.rs  mod.rs
server-tuic-rs/tests/config/: congestion_control_bbr.toml
server-tuic/src/: acl.rs  config.rs  error.rs  io.rs  lib.rs  main.rs  panel.rs  server.rs
server-tuic/src/connection/: anti_probe.rs  handle_stream.rs  handle_task.rs  mod.rs
server-tuic/tests/config/: congestion_control_newreno.toml  default_values.toml  invalid_socket_addr.toml
server/src/: acl.pest  acl.rs  config.rs  lib.rs  main.rs  panel.rs  rule.rs  server.rs  stats.rs  utils.rs
server/src/connection/: handle_stream.rs  handle_task.rs  mod.rs
server/tests/config/: outbound_valid_with_default.toml
tests/: Cargo.toml
tests/tests/: integration_tests.rs
tuic/: Cargo.toml
tuic-client/: Cargo.toml  README.md
tuic-client/src/: config.rs  error.rs  forward.rs  lib.rs  main.rs  utils.rs
tuic-client/src/connection/: handle_stream.rs  handle_task.rs  mod.rs
tuic-client/src/socks5/: handle_task.rs  mod.rs  udp_session.rs
tuic-client/tests/config/: all_relay_options_toml.toml  alpn_configuration.json5  backward_compatibility_standard_json.json  basic.json5  basic.toml  basic.yaml  compat_json.json5  complex_config_with_all_fields.json5  default_values.json5  env_json.toml  env_var_force_toml.toml  env_yaml.toml  forwarding.yaml  inference_json.txt  inference_toml.config  inference_yaml.config  invalid_socket_addr.json5  invalid_uuid.json5  ipv6_server_address.json5  json5_comments.json5  json5_mixed_features.json5  json5_multiline_strings.json5  json5_single_quotes.json5  json5_trailing_commas.json5  json5_unquoted_keys.json5  legacy_json_config.json  minimal_json_config.json  socks5_authentication.json5  tcp_udp_forward.json5  toml_basic_config.toml  toml_full_config.toml  toml_with_defaults.toml  toml_with_forwarding.toml  valid_json5_config.json5  valid_toml_config.toml  valid_yaml_config.yaml
tuic-core/: README.md
tuic-core/src/: marshal.rs  quinn.rs  tests.rs  unmarshal.rs  utils.rs
tuic-core/src/model/: mod.rs  packet.rs
tuic-core/src/protocol/: authenticate.rs  connect.rs  mod.rs  packet.rs
tuic-server/: Cargo.toml  README.md
tuic-server/src/: acl.rs  compat.rs  config.rs  error.rs  lib.rs  main.rs  panel.rs  restful.rs  rule.rs  server.rs  stats.rs  tls.rs  utils.rs
tuic-server/src/connection/: authenticated.rs  handle_stream.rs  handle_task.rs  mod.rs  udp_session.rs
tuic-server/tests/config/: acl_comments_and_whitespace.toml  acl_parsing.toml  auto_ssl_path_generation.toml  backward_compatibility_standard_json.json  congestion_control_bbr.toml  congestion_control_newreno.toml  default_values.toml  duration_parsing.toml  empty_acl.toml  env_docker_inference.config  env_force_toml.toml  env_format_json.json  env_format_yaml.yaml  infer_format_json_without_extension  infer_format_toml_without_extension  invalid_socket_addr.toml  invalid_uuid.toml  json5_backward_compatibility.json5  json5_comprehensive_features.json5  json5_with_acl_rules.json5  json5_with_comments.json5  json5_with_trailing_commas.json5  json5_with_unquoted_keys.json5  json_config.json  legacy_field_migration_json.json  outbound_no_configuration.toml  outbound_valid_with_default.toml  outbound_with_legacy_ip_mode_aliases.toml  path_handling.toml  valid_toml_config.toml  yaml_config_format.yaml
tuic-tests/: Cargo.toml
tuic-tests/tests/: integration_tests.rs
tuic/src/: lib.rs  utils.rs
tuic/src/model/: connect.rs  heartbeat.rs
