[workspace]
members = ["core", "server-agent", "tests"]
resolver = "2"

[workspace.package]
authors = ["EAimTY <ea.imty@gmail.com>", "Itsusinn <sun@ihsin.dev>", "xflash-panda <masterorigin91@gmail.com>"]
version = "0.1.3"
rust-version = "1.85.0"
edition = "2024"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/Itsusinn/tuic"

[profile.release]
opt-level = "z"
debug = 1
lto = "fat"
strip = true
incremental = false
codegen-units = 1
