[workspace]
members = ["core", "server-tuic-rs-agent", "tests"]
resolver = "2"

[workspace.package]
authors = ["EAimTY <ea.imty@gmail.com>", "Itsusinn <sun@ihsin.dev>", "xflash-panda <masterorigin91@gmail.com>"]
version = "0.4.2"
rust-version = "1.85.0"
edition = "2024"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/xflash-panda/server-tuic-rs"

[workspace.dependencies]
quinn = { branch = "bbrv3", git = "https://github.com/Tipuch/quinn.git", default-features = false }
quinn-proto = { branch = "bbrv3", git = "https://github.com/Tipuch/quinn.git", default-features = false }
quinn-congestions = { git = "https://github.com/proxy-rs/quinn-congestions.git", default-features = false}

[profile.release]
opt-level = "z"
debug = 1
lto = "fat"
strip = true
incremental = false
codegen-units = 1
