[package]
name = "tuic-core"
version.workspace = true
authors.workspace = true
description = "Core implementation of TUIC protocol with QUIC integration"
categories = ["network-programming"]
keywords = ["network", "proxy", "quic", "tuic"]
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[features]
async_marshal = ["futures-util"]
marshal = []
model = ["parking_lot", "register-count"]
ring = ["rustls/ring", "tokio-rustls/ring"]
aws-lc-rs = ["rustls/aws-lc-rs", "tokio-rustls/aws-lc-rs"]

[dependencies]
# From tuic
bytes = { version = "1", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = ["io", "std"], optional = true }
parking_lot = { version = "0.12", default-features = false, optional = true }
register-count = { version = "0.1", default-features = false, features = ["std"], optional = true }
thiserror = { version = "2", default-features = false }
uuid = { version = "1", default-features = false, features = ["std"] }
serde = { version = "1", default-features = false, features = ["derive", "std"] }

# From tuic-quinn
tracing = { version = "0.1", default-features = false}
quinn = { workspace = true, default-features = false, features = ["futures-io"]}
tokio = { version = "1", default-features = false, features = ["io-util"] }
eyre = { version = "0.6" }

[dev-dependencies]
tuic-core = { path = ".", features = ["async_marshal", "marshal", "model"] }
uuid = { version = "1", features = ["v4"] }
serde_json = { version = "1" }
tokio = { version = "1", default-features = false, features = ["macros", "rt", "net", "io-util", "time"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rcgen = { version = "0.14", default-features = false, features = ["crypto", "ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }

[package.metadata.docs.rs]
all-features = true
