[package]
name = "server-agent"
version.workspace = true
authors.workspace = true
description = "Minimalistic TUIC server implementation as a reference"
categories = ["network-programming"]
keywords = ["network", "proxy", "quic", "tuic"]
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["aws-lc-rs"]
ring = ["tuic/ring", "rustls/ring", "quinn/rustls-ring"]
aws-lc-rs = ["tuic/aws-lc-rs", "dep:aws-lc-rs", "rustls/aws-lc-rs", "quinn/rustls-aws-lc-rs"]
jemallocator = ["tikv-jemallocator"]

[dependencies]

toml = "0.9"
clap = { version = "4", features = ["derive"] }
socket2 = { version = "0.6", default-features = false }
arc-swap = "1"
uuid = { version = "1", default-features = false, features = ["serde", "std", "v4"] }
moka = { version = "0.12", features = ["future"] }

# QUIC
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "log"] }

# Core
tuic = { package = "tuic-core", path = "../core", default-features = false, features = ["async_marshal", "marshal", "model"] }
register-count = { version = "0.1.0", default-features = false, features = ["std"] }

# Panel gRPC Client
server-r-agent-proto = { git = "https://github.com/xflash-panda/server-r-agent-proto.git", tag = "v0.1.2" }
server-r-client = { git = "https://github.com/xflash-panda/server-r-client", tag = "v0.1.7" }
tonic = "0.14"
hostname = "0.4"

# Tokio/Async
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "net", "parking_lot", "rt-multi-thread", "time", "fs", "signal"] }

# TLS
rustls = { version = "0.23", default-features = false }
rustls-pemfile = { version = "2", default-features = false, features = ["std"]}
aws-lc-rs = { version = "1", default-features = false, optional = true, features = ["prebuilt-nasm"] }

# Serde
bytes = { version = "1", default-features = false, features = ["std"] }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = "1"
serde_yaml = "0.9"
figment = { version = "0.10", features = ["toml"] }
educe = { version = "0.6", default-features = false, features = ["Default"] }
derive_more = { version = "2", default-features = false, features = ["display"] }
humantime-serde = "1"
ip_network = "0.4"
ipnet = { version = "2", features = ["serde"] }
regex = "1"
pest = "2.8"
pest_derive = "2.8"

# ACL Engine
acl-engine-r = { git = "https://github.com/xflash-panda/acl-engine-r", tag = "v0.3.0" }

# Logging
time = { version = "0.3", features = ["macros", "local-offset"] }
humantime = { version = "2", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["tracing-log", "std", "local-time","fmt", "ansi"] }
tracing = "0.1"

# Error handling
thiserror = { version = "2", default-features = false }
eyre = { version = "0.6" }

# Async trait
async-trait = "0.1"

tikv-jemallocator = { version = "0.6", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-test = "0.4"
rcgen = { version = "0.14", default-features = false, features = ["crypto", "pem", "aws_lc_rs"] }