[package]
name = "tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = ["aws-lc-rs"]
ring = ["tuic/ring", "rustls/ring", "server-tuic-agent/ring"]
aws-lc-rs = ["tuic/aws-lc-rs", "dep:aws-lc-rs", "rustls/aws-lc-rs", "server-tuic-agent/aws-lc-rs"]
deplog = ["tracing-test/no-env-filter"]

[dependencies]
# Core dependencies for integration tests
tuic = { package = "tuic-core", path = "../core", default-features = false, features = ["async_marshal", "marshal", "model"] }
server-tuic-agent = { path = "../server-tuic-agent", default-features = false }

# Required dependencies
uuid = { version = "1", features = ["v4", "serde", "std"] }
tokio = { version = "1", features = ["full"] }
json5 = { version = "1.3" }
lexopt = { version = "0.3" }
eyre = { version = "0.6" }
fast-socks5 = { version = "1.0.0" }
rustls = { version = "0.23", default-features = false }
tracing-test = { version = "0.2" }
tracing = "0.1"
serial_test = "3"
aws-lc-rs = { version = "1", default-features = false, optional = true, features = ["prebuilt-nasm"] }
server-r-client = { git = "https://github.com/xflash-panda/server-r-client", branch = "dev" }