[package]
name = "tuic-client"
version.workspace = true
authors.workspace = true
description = "Minimalistic TUIC client implementation as a reference"
categories = ["network-programming"]
keywords = ["network", "proxy", "quic", "tuic"]
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["aws-lc-rs"]
ring = ["tuic-core/ring", "rustls/ring", "quinn/rustls-ring"]
aws-lc-rs = ["tuic-core/aws-lc-rs", "dep:aws-lc-rs", "rustls/aws-lc-rs", "quinn/rustls-aws-lc-rs"]
jemallocator = ["tikv-jemallocator"]

[dependencies]
bytes = { version = "1", default-features = false, features = ["std"] }

clap = { version = "4", features = ["derive"] }
once_cell = { version = "1", default-features = false, features = ["parking_lot", "std"] }

serde = { version = "1", default-features = false, features = ["derive", "std"] }
json5 = { version = "0.4", default-features = false }
toml = "0.9"
serde_yaml = "0.9"
figment = { version = "0.10", features = ["toml", "yaml"] }
figment-json5 = "0.1.1"
educe = { version = "0.6", default-features = false, features = ["Default"] }
humantime-serde = "1"
socket2 = { version = "0.6", default-features = false }
socks5-proto = { version = "0.3", default-features = false }
socks5-server = { version = "0.8", default-features = false }

uuid = { version = "1", default-features = false, features = ["serde", "std"] }

# QUIC
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio","log"] }

# TUIC
tuic-core = { path = "../tuic-core", default-features = false, features = ["async_marshal", "marshal", "model"] }
register-count = { version = "0.1.0", default-features = false, features = ["std"] }

# Tokio/Async
crossbeam-utils = { version = "0.8", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "net", "parking_lot", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7", default-features = false, features = ["compat"] }

# TLS
rustls = { version = "0.23", default-features = false }
rustls-native-certs = { version = "0.8", default-features = false }
rustls-pemfile = { version = "2", default-features = false, features = ["std"] }
aws-lc-rs = { version = "1", default-features = false, optional = true, features = ["prebuilt-nasm"] }

# Error-handling
thiserror = { version = "2", default-features = false }
anyhow = "1"
eyre = { version = "0.6" }

# Logging
time = { version = "0.3", features = ["macros", "local-offset"] }
humantime = { version = "2", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["tracing-log", "std", "local-time", "fmt", "ansi"] }
chrono = "0.4"
tracing = "0.1"

tikv-jemallocator = { version = "0.6", optional = true }

[dev-dependencies]
tempfile = "3"