[package]
name = "tuic-server"
version.workspace = true
authors.workspace = true
description = "Minimalistic TUIC server implementation as a reference"
categories = ["network-programming"]
keywords = ["network", "proxy", "quic", "tuic"]
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["aws-lc-rs"]
ring = ["tuic-core/ring", "rustls/ring", "rcgen/ring", "quinn/rustls-ring", "instant-acme/ring"]
aws-lc-rs = ["tuic-core/aws-lc-rs", "dep:aws-lc-rs", "rustls/aws-lc-rs", "rcgen/aws_lc_rs", "quinn/rustls-aws-lc-rs", "instant-acme/aws-lc-rs"]
jemallocator = ["tikv-jemallocator"]

[dependencies]

toml = "0.9"
clap = { version = "4", features = ["derive"] }
socket2 = { version = "0.6", default-features = false }
arc-swap = "1"
uuid = { version = "1", default-features = false, features = ["serde", "std", "v4"] }
moka = { version = "0.12", features = ["future"] }
sha2 = "0.10"

# QUIC
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "log"] }

# TUIC
tuic-core = { path = "../tuic-core", default-features = false, features = ["async_marshal", "marshal", "model"] }
register-count = { version = "0.1.0", default-features = false, features = ["std"] }

# Tokio/Async
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "net", "parking_lot", "rt-multi-thread", "time", "fs", "signal"] }

# TLS
rustls = { version = "0.23", default-features = false }
rustls-pemfile = { version = "2", default-features = false, features = ["std"]}
rcgen = { version = "0.14", default-features = false, features = ["crypto", "pem"] }
instant-acme = { version = "0.8", default-features = false, features = ["hyper-rustls"] }
x509-parser = "0.18"
aws-lc-rs = { version = "1", default-features = false, optional = true, features = ["prebuilt-nasm"] }

# Serde
bytes = { version = "1", default-features = false, features = ["std"] }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
json5 = { version = "0.4", default-features = false }
serde_json = { version = "1", default-features = false, features = ["std"] }
figment = { version = "0.10", features = ["toml", "yaml"] }
figment-json5 = "0.1.1"
educe = { version = "0.6", default-features = false, features = ["Default"] }
derive_more = { version = "2", default-features = false, features = ["display"] }
humantime-serde = "1"
ip_network = "0.4"
ipnet = { version = "2", features = ["serde"] }
regex = "1"
pest = "2.7"
pest_derive = "2.7"

# Logging
time = { version = "0.3", features = ["macros", "local-offset"] }
humantime = { version = "2", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["tracing-log", "std", "local-time","fmt", "ansi"] }
tracing = "0.1"

# Error handling
thiserror = { version = "2", default-features = false }
eyre = { version = "0.6" }

# Web
axum = { version = "0.8", features = ["json", "tokio"] }
axum-extra = { version = "0.12", features = ["typed-header"] }

tikv-jemallocator = { version = "0.6", optional = true }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"]}
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
x509-parser = "0.18"
chrono = "0.4"
tokio-test = "0.4"